--- a/auspicious/templates/page/telecom-project.html
+++ b/auspicious/templates/page/telecom-project.html
@@ -51,6 +51,8 @@
                         <div class="table-responsive">
                             <table class="table" style="text-align: center">
                                 <tr>
+
+                                    <td></td>
                                     <th>Sl</th>
                                     <th>Project Name</th>
                                     <th>Client Name</th>
@@ -59,6 +61,8 @@
                                 </tr>
                                 {% for project in ongoing_project_lists %}
                                 <tr>
+
+                                    <td><button type="button" class="btn btn-outline-primary"><i class="fa fa-eye" aria-hidden="true"></i></button></td>
                                     <td>{{ forloop.counter  }}</td>
                                     <td>{{ project.name}}</td>
                                     <td>{{ project.client_name }}</td>
@@ -90,6 +94,7 @@
                         <div class="table-responsive">
                             <table class="table" style="text-align: center">
                                 <tr>
+                                    <td></td>
                                     <th>Sl</th>
                                     <th>Project Name</th>
                                     <th>Client Name</th>
@@ -98,6 +103,7 @@
                                 </tr>
                                 {% for project in completed_project_lists %}
                                 <tr>
+                                    <td><button type="button" class="btn btn-outline-primary"><i class="fa fa-eye" aria-hidden="true"></i></button></td>
                                     <td>{{ forloop.counter }}</td>
                                     <td>{{ project.name}}</td>
                                     <td>{{ project.client_name }}</td>
