--- a/auspicious/templates/page/telecom-project.html
+++ b/auspicious/templates/page/telecom-project.html
@@ -55,6 +55,7 @@
                                     <td></td>
                                     <th>Sl</th>
                                     <th>Project Name</th>
+                                    <th>Image</th>
                                     <th>Client Name</th>
                                     <th>Start Year</th>
                                     <th>Scope</th>
@@ -65,6 +66,7 @@
                                     <td><button type="button" class="btn btn-outline-primary"><i class="fa fa-eye" aria-hidden="true"></i></button></td>
                                     <td>{{ forloop.counter  }}</td>
                                     <td>{{ project.name}}</td>
+                                    <td><img src="{{ project.image.url }}" alt="" style="height: 70px;width: 70px;"></td>
                                     <td>{{ project.client_name }}</td>
                                     <td>{{ project.developement_start_year }} </td>
                                     <td>{{ project.scope|safe|truncatechars_html:50}}</td>
@@ -97,6 +99,7 @@
                                     <td></td>
                                     <th>Sl</th>
                                     <th>Project Name</th>
+                                    <th>Image</th>
                                     <th>Client Name</th>
                                     <th>Year</th>
                                     <th>Scope</th>
@@ -106,6 +109,7 @@
                                     <td><button type="button" class="btn btn-outline-primary"><i class="fa fa-eye" aria-hidden="true"></i></button></td>
                                     <td>{{ forloop.counter }}</td>
                                     <td>{{ project.name}}</td>
+                                    <td><img src="{{ project.image.url }}" alt="" style="height: 70px;width: 70px;"></td>
                                     <td>{{ project.client_name }}</td>
                                     <td>{{ project.developement_start_year }} - {{ project.developement_end_year }} </td>
                                     <td>{{ project.scope|safe|truncatechars_html:50}}</td>
