--- a/auspicious/templates/page/career.html
+++ b/auspicious/templates/page/career.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load custom_tags %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -129,11 +131,9 @@
                                 <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
                             </div>
                             <div class="listing-title">
-                                <h4>Marketing Coordinator - SEO / SEM Experience <span class="listing-type">Full-Time</span></h4>
+                                <h4>{{ last_job_qs.job_position }}<span class="listing-type">{{ last_job_qs.job_type }}</span></h4>
                                 <ul class="listing-icons">
-                                    <li><i class="ln ln-icon-Management"></i> King</li>
-                                    <li><i class="ln ln-icon-Map2"></i> 7th Avenue, New York, NY, United States</li>
-                                    <li><i class="ln ln-icon-Money-2"></i> $5000 - $7000</li>
+                                    <li><i class="ln ln-icon-Management"></i> {{ last_job_qs.description|remove_html_tags|truncatechars_html:20}}</li>
                                     <li>
                                         <div class="listing-date new">new</div>
                                     </li>
@@ -142,75 +142,21 @@
                         </a>
 
                         <!-- Listing -->
-                        <a href="job-page.html" class="listing part-time">
-                            <div class="listing-logo">
-                                <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
-                            </div>
-                            <div class="listing-title">
-                                <h4>Core PHP Developer for Site Maintenance <span class="listing-type">Part-Time</span></h4>
-                                <ul class="listing-icons">
-                                    <li><i class="ln ln-icon-Management"></i> Cubico</li>
-                                    <li><i class="ln ln-icon-Map2"></i> Sydney</li>
-                                    <li><i class="ln ln-icon-Money-2"></i> $125 / hour</li>
-                                    <li>
-                                        <div class="listing-date">3d ago</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </a>
-
-                        <!-- Listing -->
+                        {% for job in job_lists %}
                         <a href="job-page.html" class="listing full-time">
                             <div class="listing-logo">
                                 <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
                             </div>
                             <div class="listing-title">
-                                <h4>Restaurant Team Member - Crew <span class="listing-type">Full-Time</span></h4>
+                                <h4>{{ job.job_position }}<span class="listing-type">{{ job.job_type }}</span></h4>
                                 <ul class="listing-icons">
-                                    <li><i class="ln ln-icon-Management"></i> King</li>
-                                    <li><i class="ln ln-icon-Map2"></i> Sydney</li>
-                                    <li>
-                                        <div class="listing-date">3d ago</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </a>
+                                    <li><i class="ln ln-icon-Management"></i> {{ job.description|remove_html_tags|truncatechars_html:20}}</li>
 
-                        <!-- Listing -->
-                        <a href="job-page.html" class="listing internship">
-                            <div class="listing-logo">
-                                <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
-                            </div>
-                            <div class="listing-title">
-                                <h4>Power Systems User Experience Designer <span class="listing-type">Internship</span></h4>
-                                <ul class="listing-icons">
-                                    <li><i class="ln ln-icon-Management"></i> Hexagon</li>
-                                    <li><i class="ln ln-icon-Map2"></i> London</li>
-                                    <li><i class="ln ln-icon-Money-2"></i> $55 / hour</li>
-                                    <li>
-                                        <div class="listing-date">4d ago</div>
-                                    </li>
                                 </ul>
                             </div>
                         </a>
+                        {% endfor %}
 
-                        <!-- Listing -->
-                        <a href="job-page.html" class="listing freelance">
-                            <div class="listing-logo">
-                                <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
-                            </div>
-                            <div class="listing-title">
-                                <h4>iPhone / Android Music App Development <span class="listing-type">Freelance</span></h4>
-                                <ul class="listing-icons">
-                                    <li><i class="ln ln-icon-Management"></i> Hexagon</li>
-                                    <li><i class="ln ln-icon-Map2"></i> London</li>
-                                    <li><i class="ln ln-icon-Money-2"></i> $85 / hour</li>
-                                    <li>
-                                        <div class="listing-date">4d ago</div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </a>
                     </div>
                 </div>
             </div>
