--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- favicon -->
-<link rel="apple-touch-icon" href="{% static 'assets/landing/assets/img/favicons/apple-touch-icon.png' %}">
-<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/assets/img/favicons/favicon.ico' %}">
+<link rel="apple-touch-icon" href="{% static 'assets/landing/img/title.png' %}">
+<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/img/title.png' %}">
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
