--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -40,7 +40,7 @@
     <div class="about-area py-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 overview">
                     <div class="top-content " style="text-align: justify">
                         <h3><span>History</span>Overview</h3>
                         <p><span class="fw-bold">AUSPICIOUS</span> is a fast growing firm bearing motto in mind “Think for the best”. It is configured by some dynamic and potential engineers having good academic background, high quality performance, vast experience & strong ability of liaison.</p>
