--- a/auspicious/templates/components/footer.html
+++ b/auspicious/templates/components/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-md-3 col-6 mb-4 mb-md-0">
                     <div class="title">About Us</div>
                     <ul class="list-unstyled">
-                        <li><a href="">Overview</a></li>
+                        <li data = ".overview">Overview</li>
                         <li><a href="">Mission & Vision</a></li>
                         <li><a href="">Organization Profile</a></li>
                         <li><a href="">Top Management</a></li>
