Static files updated

--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -13,9 +13,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
 <!-- Font Awesome CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}">
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}"> -->
+<link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
 <!-- Animate CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/css/animate.css' %}">
 <!-- Owl Carousel CSS -->
@@ -39,6 +41,7 @@
 <link rel="stylesheet" href="{% static 'assets/landing/assets/plugins/swiper/swiper-config.css' %}">
 
 <!-- jquery latest version -->
-<script src="{% static 'assets/landing/assets/js/jquery.min.js' %}"></script>
+<!-- <script src="{% static 'assets/landing/assets/js/jquery.min.js' %}"></script> -->
+<script src="{% static 'assets/vendors/jquery/jquery.min.js' %}"></script>
 
 <title>Auspicious</title>
