--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -1,71 +1,133 @@
 {% load static %}
-    <!-- Topbar -->
-    <div class="topbar">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 offset-lg-2 col-12">
-                    <div class="topbar-address">
-                        <ul>
-                            <li><a href="tel:+0123456789"><i class="fa fa-phone"></i><span>Phone:</span> +0123456789</a></li>
-                            <li><a href="mailto:info@example.com"><i class="fa fa-envelope"></i><span>Email:</span> info@example.com</a></li>
-                            <li><a href="#"><i class="fa fa-map-marker"></i><span>Location:</span> 28/A Street, The king city, USA </a></li>
-                        </ul>
-                    </div>
+
+{% url 'account_signup' as signup_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_logout' as logout_url %}
+
+<!-- Topbar -->
+<div class="topbar">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 offset-lg-2 col-12">
+                <div class="topbar-address">
+                    <ul>
+                        <li><a href="tel:+0123456789"><i class="fa fa-phone"></i><span>Phone:</span> +0123456789</a>
+                        </li>
+                        <li><a href="mailto:info@example.com"><i class="fa fa-envelope"></i><span>Email:</span>
+                                info@example.com</a></li>
+                        <li><a href="#"><i class="fa fa-map-marker"></i><span>Location:</span> 28/A Street, The king
+                                city, USA </a></li>
+
+                        {% if not request.user.is_authenticated %}
+                        <li class="m-2 non-bullet-list">
+                            <a href="{{ signup_url }}" class="fw-bold">
+                                <i class="fa fa-plus-circle"></i> Signup
+                            </a>
+                        </li>
+                        <li class="m-2 non-bullet-list">
+                            <a href="{{ login_url }}" class="fw-bold">
+                                <i class="fa fa-location-arrow"></i> Login
+                            </a>
+                        </li>
+                        {% else %}
+
+                        <li>
+                            <a class="dropdown-item bg-c-danger" href="#" data-toggle="modal"
+                                data-target="#logoutModal">
+                                <i class="icon-mid bi bi-box-arrow-left me-2"></i>
+                                Logout
+                            </a>
+                        </li>
+
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Launch demo modal
+                        </button>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Topbar -->
+</div>
+<!-- End Topbar -->
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static './assets/landing/assets/img/logo.png'%}" alt="Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 non-bullet-list">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Projects
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="projectDropdown">
-                            <li><a class="dropdown-item" href="{% url 'civil_project' %}">Civil</a></li>
-                            <li><a class="dropdown-item" href="{% url 'telecom_project' %}">Telecom</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="serviceDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="serviceDropdown">
-                            <li><a class="dropdown-item" href="{% url 'civil_service' %}">Civil</a></li>
-                            <li><a class="dropdown-item" href="{% url 'telecom_service' %}">Telecom</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'career' %}">Career</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'client' %}">Sister & Client Concern</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'news' %}">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                    </li>
-                </ul>
+<!-- Navbar Start -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static './assets/landing/assets/img/logo.png'%}" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 non-bullet-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Projects
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="projectDropdown">
+                        <li><a class="dropdown-item" href="{% url 'civil_project' %}">Civil</a></li>
+                        <li><a class="dropdown-item" href="{% url 'telecom_project' %}">Telecom</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="serviceDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="serviceDropdown">
+                        <li><a class="dropdown-item" href="{% url 'civil_service' %}">Civil</a></li>
+                        <li><a class="dropdown-item" href="{% url 'telecom_service' %}">Telecom</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'career' %}">Career</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'client' %}">Sister & Client Concern</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'news' %}">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Navbar End -->
+
+
+{% include "snippets/logout-modal.html" %}
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
-    </nav>
-    <!-- Navbar End -->
+    </div>
+</div>
