--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -1,14 +1,21 @@
 {% load static %}
 
+<script src="{% static 'assets/js/popper.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+
 <!-- swiper js -->
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.js' %}"></script>
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-config.js' %}"></script>
 <!-- modernizr js -->
 <script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script>
 <!-- Bootstrap JS -->
-<script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script>
+<!-- <script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script> -->
 <!-- wow js -->
 <script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script>
+<!-- Sweet Alert -->
+<script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script>
+<!-- Bootstrap Validator -->
+<script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script>
 <!-- owl.carousel js -->
 <script src="{% static 'assets/landing/assets/js/owl.carousel.min.js' %}"></script>
 <!-- Slick js -->
