--- a/static/assets/landing/assets/css/custom.css
+++ b/static/assets/landing/assets/css/custom.css
@@ -5,3 +5,14 @@
 ul {
     list-style-type: disc !important;
 }
+
+/* modal customization */
+.modal-backdrop {
+    z-index: 1040 !important;
+    display: none;
+}
+
+.modal-dialog {
+    margin: 2px auto;
+    z-index: 1100 !important;
+}
