--- a/auspicious/templates/page/all-jobs.html
+++ b/auspicious/templates/page/all-jobs.html
@@ -20,7 +20,7 @@
                 <!-- Breadcrumbs-Content -->
                 <div class="col-lg-7 col-md-7 col-12">
                     <div class="breadcrumbs-content">
-                        <h2>Career</h2>
+                        <h2>All Jobs</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                     <div class="breadcrumbs-menu">
                         <ul>
                             <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="career.html">Career</a></li>
+                            <li class="active"><a href="career.html">All Jobs</a></li>
                         </ul>
                     </div>
                 </div>
@@ -37,37 +37,13 @@
         </div>
     </section>
     <!-- End Breadcrumbs -->
-
-    <div class="career-area py-5">
-        <div class="container">
-            <h3>Categories</h3>
-            <div class="row">
-                {% for job_position in job_position_qs %}
-                <div class="col-md-3 col-sm-2">
-                    <div class="category-item text-center">
-                        <a href="">
-                            <i class="fa fa-bar-chart"></i>
-                            <h4>Accouting / Finance</h4>
-                            <span>32</span>
-                        </a>
-                    </div>
-                </div>
-                {% endfor %}
-
-            </div>
-        </div>
-    </div>
-
+<br>
+<br>
     <div class="job-lists pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                     <div class="row">
-                    <h3 class="col-6">Recent Jobs</h3>
-                    <h4 class="col-6" style="text-align:right; ">
-                        <a href="{% url 'all_job_lists' %}" style="color:#8a8888">View All</a>
-                    </h4>
-                     </div>
+                    <h3 class="mb-25">All Jobs</h3>
                     <div class="listings-container">
 
                         <!-- Listing -->
