--- a/auspicious/templates/page/career.html
+++ b/auspicious/templates/page/career.html
@@ -45,10 +45,10 @@
                 {% for job_position in job_position_qs %}
                 <div class="col-md-3 col-sm-2">
                     <div class="category-item text-center">
-                        <a href="">
+                        <a href="{% url 'filtered_job_lists' slug=job_position.slug %}">
                             <i class="fa fa-bar-chart"></i>
-                            <h4>Accouting / Finance</h4>
-                            <span>32</span>
+                            <h4>{{ job_position.title }}</h4>
+                            <span>{{ job_position.get_job_count }}</span>
                         </a>
                     </div>
                 </div>
