Job Apply Working

--- a/auspicious/templates/page/job-page.html
+++ b/auspicious/templates/page/job-page.html
@@ -112,7 +112,13 @@
                         </ul>
 
 
-                        <a href="#" class="popup-with-zoom-anim button">Apply For This Job</a>
+                        <!-- <a href="#" class="popup-with-zoom-anim button" data-target="#jobApplyModal"
+                            data-toggle="modal">
+                            Apply For This Job
+                        </a> -->
+                        <a href="{% url 'job_apply' slug=job_qs.slug %}" class="popup-with-zoom-anim button">
+                            Apply For This Job
+                        </a>
                     </div>
 
                 </div>
@@ -121,6 +127,8 @@
             <!-- Widgets / End -->
         </div>
     </div>
+
+    {% include "page/snippets/job-apply-modal.html" %}
 
 
     {% include "components/footer.html" %}
