--- a/auspicious/templates/page/job-apply.html
+++ b/auspicious/templates/page/job-apply.html
@@ -41,7 +41,7 @@
             <form role="form" method="POST" data-toggle="validator" enctype="multipart/form-data" class="form">
                 {% csrf_token %}
                 <div class="card-body">
-                    {% include 'dashboard/snippets/form.html' %}
+                    {% include 'page/snippets/form.html' %}
                 </div>
                 <!-- /.card-body -->
 
