--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -98,5 +98,8 @@
 </nav>
 <!-- Navbar End -->
 
+<!-- messages -->
+{% include 'snippets/messages.html' %}
+
 
 {% include "snippets/logout-modal.html" %}
