--- a/auspicious/templates/account/login.html
+++ b/auspicious/templates/account/login.html
@@ -15,8 +15,10 @@ Log in
 <form method="POST" action="{% url 'account_login' %}" class="" data-toggle="validator">
   {% csrf_token %}
   {% include 'snippets/account-form.html' %}
-  <div class="text-center">
-    <button type="submit" class="btn btn-success btn-block">Login</button>
+  <div class="row justify-content-center">
+    <div class="col-4 text-center">
+      <button type="submit" class="btn btn-success btn-block btn-lg">Login</button>
+    </div>
   </div>
 </form>
 
