--- a/auspicious/templates/account/signup.html
+++ b/auspicious/templates/account/signup.html
@@ -10,7 +10,11 @@ Sign up
   {% csrf_token %}
   {% include 'snippets/account-form.html' %}
 
-  <button type="submit" class="btn btn-primary btn-block">Sign up</button>
+  <div class="row justify-content-center">
+    <div class="col-4 text-center">
+      <button type="submit" class="btn btn-primary btn-block btn-lg">Sign up</button>
+    </div>
+  </div>
 
 </form>
 
