--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -3,6 +3,11 @@
 <script src="{% static 'assets/js/popper.min.js' %}"></script>
 <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
 
+<!-- Sweet Alert -->
+<script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script>
+<!-- Bootstrap Validator -->
+<script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script>
+
 <!-- swiper js -->
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.js' %}"></script>
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-config.js' %}"></script>
