--- a/auspicious/templates/page/contact.html
+++ b/auspicious/templates/page/contact.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.359517254525!2d90.4169200143495!3d23.8058114925755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8ad13495713%3A0x58c57f0efbc32a55!2sRapples%20Entertainment%20Ltd.!5e0!3m2!1sen!2sbd!4v1619614768394!5m2!1sen!2sbd" style="border:0;" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/place/Auspicious/@23.7936302,90.421609,17z/data=!3m1!4b1!4m5!3m4!1s0x3755c7116de4f1e7:0xafada13c373b91c7!8m2!3d23.7936107!4d90.4236419?hl=en" style="border:0;" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
@@ -104,13 +104,13 @@
                 <div class="col-md-4 col-12">
                     <div class="icon-text">
                         <i class="fa fa-phone" aria-hidden="true"></i>
-                        <a href="tel:+8809611699580">+8809611699580</a>
+                        <a href="tel:+8809611699580">{{contact_qs.phone1}}</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-12">
                     <div class="icon-text">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:info@auspiciousbd.com">info@auspiciousbd.com</a>
+                        <a href="mailto:info@auspiciousbd.com">{{contact_qs.email}}</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-12">
