Font Awesome Library Updated

--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -14,7 +14,8 @@
 
 <!-- Font Awesome CSS -->
 <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-<link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}"> -->
+<link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/font-awesome.min.css' %}">
 <!-- Bootstrap CSS -->
 <!-- <link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}"> -->
 <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
