--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -38,159 +38,41 @@
     <div class="blog-area pt-100 pb-100">
         <div class="container">
             <div class="row">
+                {% for news in news_lists %}
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
                         <div class="blog-img-date-wrap mb-25">
                             <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-1.png' %}" alt=""></a>
+                                <a href="{% url 'news_details' %}"><img src={{ news.image.url }} alt=""></a>
                             </div>
                             <div class="blog-date">
-                                <h5>05 <span>May</span></h5>
+                                <h5>{{ news.created_at.date.day }} <span>{{ news.created_at|date:"M" }}</span></h5>
                             </div>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
+                                <ul class="non-bullet-list">
+                                    <li><a href="">{{ news.category }}</a>,</li>
                                     <li>By:<a href="#"> Admin</a></li>
                                 </ul>
                             </div>
-                            <h3><a href="{% url 'news_details' %}">Lorem ipsum dolor consectet.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
+                                <h3><a href="{% url 'news_details' %}"></a>
+                                    {{ news.title }}
+                                </h3>
+                                <p>
+                                {{ news.description|safe|truncatechars_html:100}}
+                                </p>
                             <div class="blog-btn-2 btn-hover">
                                 <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-2.png' %}" alt=""></a>
-                            </div>
-                            <div class="blog-date">
-                                <h5>03 <span>Jun.</span></h5>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
-                                </ul>
-                            </div>
-                            <h3><a href="{% url 'news_details' %}">Duis et volutpat pellentesque.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-3.png' %}" alt=""></a>
-                            </div>
-                            <div class="blog-date">
-                                <h5>07 <span>Feb.</span></h5>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
-                                </ul>
-                            </div>
-                            <h3><a href="{% url 'news_details' %}">Vivamus vitae dolor convallis.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="4s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-2.png' %}" alt=""></a>
-                            </div>
-                            <div class="blog-date">
-                                <h5>08 <span>Dec.</span></h5>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
-                                </ul>
-                            </div>
-                            <h3><a href="{% url 'news_details' %}">Vivamus amet tristique orci.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="4s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-3.png' %}" alt=""></a>
-                            </div>
-                            <div class="blog-date">
-                                <h5>02 <span>Nov.</span></h5>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
-                                </ul>
-                            </div>
-                            <h3><a href="{% url 'news_details' %}">Pellentesque pretium place.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="4s">
-                        <div class="blog-img-date-wrap mb-25">
-                            <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src="{% static 'assets/landing/assets/img/blog/blog-1.png' %}" alt=""></a>
-                            </div>
-                            <div class="blog-date">
-                                <h5>09 <span>Oct.</span></h5>
-                            </div>
-                        </div>
-                        <div class="blog-content">
-                            <div class="blog-meta">
-                                <ul>
-                                    <li><a href="#">Furniture</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
-                                </ul>
-                            </div>
-                            <h3><a href="{% url 'news_details' %}">Sed euismod tristique dolor.</a></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipi elit, sed do eiusmod tempor incididunt ut labo et dolore magna aliqua.</p>
-                            <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
             <div class="pagination-style-1 wow fadeInUp" data-wow-duration="2s">
-                <ul>
+                <ul class="non-bullet-list">
                     <li><a class="next" href="#"><i class="fa fa-angle-double-left"></i></a></li>
                     <li><a href="#">1</a></li>
                     <li><a class="active" href="#">2</a></li>
